# fanta_nba_portal

./: .gitignore  README.md  docker-compose.yaml  start_logging.sh
azure/: README.md  aks-dbsynch-deployment.yaml  aks-deployment.yaml  aks-frontend-deployment.yaml  aks-gathering-deployment.yaml  aks-hop.yaml  aks-mongodb-backup-deployment.yaml  aks-mongodb-deployment.yaml  aks-preprocessing-deployment.yaml  apply_all.sh  inference-service-deployment.yaml  mldatabase-service-deployment.yaml  mlmanager-service-deployment.yaml  mongo-express-mldatabase-service-deployment.yaml  mongo-express-mongodb-service-deployment.yaml  pv-azuredisk.yaml  trainer-service-deployment.yaml
data_gathering/: Dockerfile  README.md  data_gather.ipynb  pyproject.toml  setup.py
data_gathering/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  home_vs_away_stats-checkpoint.ipynb
data_gathering/dg/: data_pipeline.py  main.py  nba_data_service.py
data_gathering/dg/config/: default.yaml  production.yaml
data_gathering/dg/data_preprocessors/: nba_api_data_preprocessor.py
data_gathering/dg/ml/: nn_preprocessor.py
data_gathering/dg/providers/: nba_api_impl.py  nba_data_provider.py
data_gathering/fanta_nba_data_gathering_service/: data_pipeline.py  main.py  mongo_db_connector.py  nba_data_service.py  task_scheduler.py
data_gathering/fanta_nba_data_gathering_service/config/: default.yaml  production.yaml
data_gathering/fanta_nba_data_gathering_service/data_preprocessors/: nba_api_data_preprocessor.py  nba_api_data_preprocessor_base.py
data_gathering/fanta_nba_data_gathering_service/ml/: data_preprocessor_base.py  nn_preprocessor.py
data_gathering/fanta_nba_data_gathering_service/providers/: nba_api_impl.py
data_preprocessing/: Dockerfile  README.md  pyproject.toml
data_preprocessing/fanta_nba_data_preprocessing_service/: main.py  mongo_db_connector.py  preprocessing.py  test.py
data_preprocessing/fanta_nba_data_preprocessing_service/config/: default.yaml  production.yaml
database/: Dockerfile  README.md  connection_test.py  pyproject.toml
database/dbsynch/: main.py
database/dbsynch/config/: default.yaml  production.yaml
inference/: Dockerfile  README.md  pyproject.toml
inference/inference/: database.py  inference.py  main.py
inference/inference/config/: default.yaml  production.yaml
mlmanager/: Dockerfile  README.md  pyproject.toml
mlmanager/mlmanager/: database.py  main.py
mlmanager/tests/: test_ml_manager.py
terraform/: README.md  aks-cluster.tf
trainer/: Dockerfile  README.md  pyproject.toml
trainer/tests/: test_trainer.py
trainer/trainer/: database.py  main.py  trainer.py
trainer/trainer/config/: default.yaml  production.yaml
web_server/: Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json
web_server/app/: index.js
web_server/app/controllers/: data_preprocessing.js  ml_data.controller.js  mongo.js  user_data.controller.js  utils.js
web_server/app/models/: nba_match.js
web_server/app/public/: index.html  script.js
web_server/app/routes/: ml_data.router.js  user_data.router.js
web_server/config/: default.json  production.json
