[project]
name = "fanta_nba_data_gathering_service"
description = ""
version = "0.0.1"
authors = [
    { name = "Alessandro Albanesi", email = "alessandro.albanesi@studio.unibo.it" }
]
dependencies = [
    "scikit-learn",
    "nba_api",
    "pandas",
    "numpy",
    "pyaml",
    "pymongo",
    "schedule",
    "icecream",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "jupyerlab"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
